# kbd-pulse

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
kbd_pulse/: __main__.py  animator.py  backlight.py  input_watcher.py  self_test.py  zone_diagnostics.py
scripts/: check-service-health.sh  install-permissions.sh  install-user-service.sh  slow-zone-test.sh
systemd/: kbd-pulse.service
tests/: test_animator.py  test_backlight.py  test_input_watcher.py  test_main.py  test_self_test.py  test_zone_diagnostics.py
udev/: 99-kbd-pulse.rules
